objects/Account.object
<CustomObject>
    <fields>
        <fullName>Abrechnung__c</fullName>
        <label>Abrechnung</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountImpID__c</fullName>
        <externalId>true</externalId>
        <label>AccountImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Holder__c</fullName>
        <label>Kontoinhaber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Betrag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AnfrageBetrag__c</fullName>
        <label>Partner AnfrageBetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BIC__c</fullName>
        <label>BIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bankname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branche__c</fullName>
        <label>Branche</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Makler</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Steuberater</fullName>
                </value>
                <value>
                    <fullName>sonstiges (bitte in Notiz vermerken)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Abteilung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entsch_digungsbetrag__c</fullName>
        <label>Entschädigungsbetrag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ertrag_Kunde__c</fullName>
        <formula>IF( AnfrageBetrag__c = 0 , 0,
IF( AnfrageBetrag__c &lt;= 4000 &amp;&amp; AnfrageBetrag__c &gt;= 1  , 100,
IF(AnfrageBetrag__c&lt;=7000, 200,
IF(AnfrageBetrag__c &lt;= 10000, 300,400) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ertrag Kunde</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Externe Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hauptt_tigkeit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Haupttätigkeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Haupttaetigkeit__c</fullName>
        <label>Haupttätigkeit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Versicherungen</fullName>
                </value>
                <value>
                    <fullName>Kapitalanlagen</fullName>
                </value>
                <value>
                    <fullName>Bausparverträge</fullName>
                </value>
                <value>
                    <fullName>Investment</fullName>
                </value>
                <value>
                    <fullName>sonstiges (bitte in Notiz vermerken)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hiermit_erkl_re_ich_dass_ich_weiterhin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hiermit erkläre ich, dass ich weiterhin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IBAN__c</fullName>
        <label>IBAN</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ich_bin_damIit_einverstanden_dass_im_Rah__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ich bin damit einverstanden, dass im Rah</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ich_stimme_hiermit_dem_SEPA_Einzugsverfa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ich stimme hiermit dem SEPA-Einzugsverfa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ich_stimme_hiermit_dem_VH24_Partnervertr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ich stimme hiermit dem VH24-Partnervertr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kleinunternehmer_Regelung__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kleinunternehmer-Regelung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kooperationspartner_Betrag__c</fullName>
        <label>Kooperationspartner Betrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Korrespondenz__c</fullName>
        <label>Korrespondenz</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Process_Type__c</fullName>
        <defaultValue>'Internal'</defaultValue>
        <label>Legal Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legal_Process_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leitung__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Projektverantwortlicher/Portalassistent</inlineHelpText>
        <label>Leitung</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Unternehmen</relationshipLabel>
        <relationshipName>Unternehmen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobiltelefon__c</fullName>
        <label>Mobiltelefon</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <externalId>true</externalId>
        <label>Old Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partnertyp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Repräsentant</fullName>
                </value>
                <value>
                    <fullName>Kooperation A</fullName>
                </value>
                <value>
                    <fullName>Kooperation B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ust_IdNr__c</fullName>
        <label>Ust-IdNr.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vermittler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vermittler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Unternehmen</relationshipLabel>
        <relationshipName>Unternehmen</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Unternehmen</label>
    </listViews>
    <listViews>
        <fullName>Fahrzeughersteller</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Fahrzeughersteller</value>
        </filters>
        <label>Fahrzeughersteller</label>
    </listViews>
    <listViews>
        <fullName>Gerichte</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Gericht</value>
        </filters>
        <label>Gerichte</label>
    </listViews>
    <listViews>
        <fullName>Kanzleien</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Legal Office</value>
        </filters>
        <label>Kanzleien</label>
    </listViews>
    <listViews>
        <fullName>Kreditinstitut</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Kreditinstitut</value>
        </filters>
        <label>Kreditinstitut</label>
    </listViews>
    <listViews>
        <fullName>Lebensversicherungen</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Lebensversicherung</value>
        </filters>
        <label>Lebensversicherungen</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Partner</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Partner</label>
    </listViews>
    <listViews>
        <fullName>Rechtsschutzversicherungen</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Rechtsschutzversicherung</value>
        </filters>
        <label>Rechtsschutzversicherungen</label>
    </listViews>
    <listViews>
        <fullName>Terminsvertreter</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Department__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>External_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Terminsvertreter</value>
        </filters>
        <label>Terminsvertreter</label>
    </listViews>
    <recordTypes>
        <fullName>Kooperationspartner</fullName>
        <active>true</active>
        <label>Kooperationspartner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Partner</fullName>
        <active>true</active>
        <label>Lead Partner</label>
    </recordTypes>
</CustomObject>